--- a/less/global.less
+++ b/less/global.less
@@ -49,3 +49,13 @@ img {
     margin: 0 5%;
   }
 }
+
+.hidden{
+  display: hidden;
+  opacity: 0;
+}
+
+.fadeIn{
+  transition: 0.5s ease-in;
+  opacity: 1;
+}
