--- a/less/global.less
+++ b/less/global.less
@@ -59,3 +59,22 @@ img {
   transition: 0.5s ease-in;
   opacity: 1;
 }
+
+#context-menu{
+  border: 1px solid grey;
+  border-radius: 5px;
+  width: 10rem;
+  height: 5rem;
+  ul{
+    width: 100%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: space-around;
+    justify-content: space-around;
+
+    li{
+      text-align: center;
+    }
+  }
+}
