--- a/less/global.less
+++ b/less/global.less
@@ -65,6 +65,9 @@ img {
   border-radius: 5px;
   width: 10rem;
   height: 5rem;
+  position: fixed;
+  z-index: 100;
+  background-color: white;
   ul{
     width: 100%;
     height:100%;
